# containers-course-hw

./: .dockerignore  .env.example  Dockerfile.bad  Dockerfile.good  README.md  compose.yml  pyproject.toml
HW_1/: Dockerfile.bad  Dockerfile.good  Readme.md
app/: asgi.py
app/config/: alchemy.py  constants.py  settings.py
app/db/models/: __init__.py  event.py  event_material.py  event_speaker.py  event_ticket.py  payment.py  pro_subscription.py  speaker.py  user.py
app/domain/accounts/: schemas.py  services.py
app/domain/events/: controllers.py  schemas.py  services.py
app/domain/matireals/: controllers.py  schemas.py  services.py
app/domain/payments/: schemas.py  services.py
app/domain/registrations/: controllers.py  schemas.py  services.py
app/domain/speakers/: controllers.py  schemas.py  services.py
app/domain/system/: controllers.py
app/scripts/: entry
app/server/: cors.py  dependencies.py  openapi.py  plugins.py  routers.py  startup.py
app/services/email/: email_service.py
app/services/http/: http_client.py
app/services/yookassa/: __init__.py  yookassa_client.py  yookassa_service.py
deploy/: README.md
lab1/: README.md
lab2/: README.md
lab3/: README.md
lab3/configs/: nextcloud.yml  nextcloud_configmap.yml  pg_configmap.yml  pg_deployment.yml  pg_secret.yml
lab4/: README.md
lab4/manifests/: app-configmap.yml  app-deployment.yml  app-secret.yml  app-service.yml  postgres-configmap.yml  postgres-deployment.yml  postgres-secret.yml  postgres-service.yml  redis-deployment.yml  redis-service.yml
(+5 files in other folders)
